Worked hard on generalizing online searches through exploration-imitation-exploitation. It seems like very minor changes in hill-climbing can cause large performance variations. Still a bit to clean up but all tests run now.

--- a/inputs/YAML Samples/components/BiologyInitializer.yaml
+++ b/inputs/YAML Samples/components/BiologyInitializer.yaml
@@ -17,3 +17,9 @@ Random Smoothed and Fixed:
   maxBiomass: 5000.0
   minBiomass: 0.0
 -------
+Half Bycatch:
+  carryingCapacity: '5000.0'
+  differentialPercentageToMove: '5.0E-4'
+  percentageLimitOnDailyMovement: '0.01'
+  steepness: uniform 0.6 0.8
+-------
