--- a/inputs/YAML Samples/components/BiologyInitializer.yaml
+++ b/inputs/YAML Samples/components/BiologyInitializer.yaml
@@ -4,12 +4,12 @@ Independent Logistic:
 -------
 Diffusing Logistic:
   carryingCapacity: '5000.0'
-  differentialPercentageToMove: '5.0E-4'
+  differentialPercentageToMove: '0.001'
   percentageLimitOnDailyMovement: '0.01'
   steepness: uniform 0.6 0.8
 -------
 Habitat-Aware Diffusing Logistic:
-  differentialPercentageToMove: '5.0E-4'
+  differentialPercentageToMove: '0.001'
   numberOfSpecies: 1
   percentageLimitOnDailyMovement: '0.01'
   rockyCarryingCapacity: '10000.0'
@@ -34,6 +34,13 @@ Half Bycatch:
 Split in Half:
   carryingCapacity: '10000.0'
   differentialPercentageToMove: '5.0E-4'
+  percentageLimitOnDailyMovement: '0.01'
+  steepness: uniform 0.6 0.8
+-------
+Split in Half:
+  capacityRatioSecondToFirst: '0.2'
+  differentialPercentageToMove: '0.001'
+  firstSpeciesCapacity: '5000.0'
   percentageLimitOnDailyMovement: '0.01'
   steepness: uniform 0.6 0.8
 -------
