--- a/inputs/YAML Samples/components/BiologyInitializer.yaml
+++ b/inputs/YAML Samples/components/BiologyInitializer.yaml
@@ -20,6 +20,13 @@ From Left To Right Fixed:
   biologySmoothingIndex: '1000000.0'
   maximumBiomass: '5000.0'
 -------
+From Left To Right Logistic:
+  carryingCapacity: '5000.0'
+  differentialPercentageToMove: '0.001'
+  minCapacityRatio: '0.2'
+  percentageLimitOnDailyMovement: '0.01'
+  steepness: uniform 0.6 0.8
+-------
 Random Smoothed and Fixed:
   biologySmoothingIndex: '1000000.0'
   maxBiomass: 5000.0
