Prepared for a simple calibration exercise. Created a departing probability factory that uses the usual exploration-exploitation framework

--- a/inputs/YAML Samples/components/DepartingStrategy.yaml
+++ b/inputs/YAML Samples/components/DepartingStrategy.yaml
@@ -1,5 +1,11 @@
-Fixed Probability:
+Fixed Probability Departing:
   probabilityToLeavePort: '1.0'
+-------
+Adaptive Probability Departing:
+  explorationProbability: '0.6'
+  imitationProbability: '1.0'
+  initialProbabilityToLeavePort: '0.5'
+  shockSize: '0.6'
 -------
 Fixed Rest:
   hoursBetweenEachDeparture: '12.0'
