--- a/inputs/YAML Samples/scenario/California Map Scenario.yaml
+++ b/inputs/YAML Samples/scenario/California Map Scenario.yaml
@@ -25,6 +25,7 @@ California Map Scenario:
   gasPricePerLiter: '0.811008583'
   gridWidth: 50
   holdSizePerBoat: '40000.0'
+  hourlyTravellingCosts: '0.0'
   literPerHourOfFishing: '11.652789144'
   literPerKilometer: '2.352150571'
   mainDirectory: inputs/california/
