--- a/inputs/YAML Samples/components/Market.yaml
+++ b/inputs/YAML Samples/components/Market.yaml
@@ -1,6 +1,9 @@
 Fixed Price Market:
   marketPrice: '10.0'
 -------
+Fixed Price Market Array:
+  prices: 10,10
+-------
 Congested Market:
   acceptableBiomassThreshold: '7000.0'
   consumptionPeriod: '1.0'
