--- a/inputs/YAML Samples/components/BiologyInitializer.yaml
+++ b/inputs/YAML Samples/components/BiologyInitializer.yaml
@@ -1,27 +1,37 @@
 Independent Logistic:
   carryingCapacity: '5000.0'
-  steepness: '0.4'
+  grower:
+    Independent Logistic Grower:
+      steepness: '0.4'
 -------
 Diffusing Logistic:
   carryingCapacity: '5000.0'
   differentialPercentageToMove: '0.001'
+  grower:
+    Independent Logistic Grower:
+      steepness: uniform 0.6 0.8
+  maxInitialCapacity: '1.0'
+  minInitialCapacity: '0.0'
   percentageLimitOnDailyMovement: '0.01'
-  steepness: uniform 0.6 0.8
 -------
 Habitat-Aware Diffusing Logistic:
   differentialPercentageToMove: '0.001'
+  grower:
+    Independent Logistic Grower:
+      steepness: uniform 0.6 0.8
   numberOfSpecies: 1
   percentageLimitOnDailyMovement: '0.01'
   rockyCarryingCapacity: '10000.0'
   sandyCarryingCapacity: '2000.0'
-  steepness: uniform 0.6 0.8
 -------
 Habitat-Aware 2 Species:
   differentialPercentageToMove: '0.001'
+  grower:
+    Independent Logistic Grower:
+      steepness: uniform 0.6 0.8
   percentageLimitOnDailyMovement: '0.01'
   rockyCarryingCapacity: '10000.0'
   sandyCarryingCapacity: '2000.0'
-  steepness: uniform 0.6 0.8
 -------
 From Left To Right Fixed:
   biologySmoothingIndex: '1000000.0'
@@ -32,7 +42,6 @@ From Left To Right Logistic:
   differentialPercentageToMove: '0.001'
   minCapacityRatio: '0.2'
   percentageLimitOnDailyMovement: '0.01'
-  steepness: uniform 0.6 0.8
 -------
 From Left To Right Well-Mixed:
   firstSpeciesName: Species 0
@@ -48,23 +57,30 @@ Random Smoothed and Fixed:
 Half Bycatch:
   carryingCapacity: '5000.0'
   differentialPercentageToMove: '5.0E-4'
+  grower:
+    Independent Logistic Grower:
+      steepness: uniform 0.6 0.8
   percentageLimitOnDailyMovement: '0.01'
-  steepness: uniform 0.6 0.8
 -------
 Split in Half:
   carryingCapacity: '10000.0'
   differentialPercentageToMove: '5.0E-4'
+  grower:
+    Independent Logistic Grower:
+      steepness: uniform 0.6 0.8
   percentageLimitOnDailyMovement: '0.01'
-  steepness: uniform 0.6 0.8
 -------
 Well-Mixed:
   capacityRatioSecondToFirst: '0.2'
   differentialPercentageToMove: '0.001'
   firstSpeciesCapacity: '5000.0'
+  grower:
+    Independent Logistic Grower:
+      steepness: uniform 0.6 0.8
   percentageLimitOnDailyMovement: '0.01'
-  steepness: uniform 0.6 0.8
 -------
 Osmose Biology:
+  indexOfSpeciesToBeManagedByThisModel: 0,1,2,3,4,5,6,7,8,9
   numberOfOsmoseStepsToPulseBeforeSimulationStart: 100
   osmoseConfigurationFile: /home/carrknight/code/oxfish/inputs/osmose/prototype/osm_all-parameters.csv
   preInitializedConfiguration: true
@@ -75,15 +91,36 @@ Two Species Box:
   boxWidth: '10.0'
   differentialPercentageToMove: '0.001'
   firstSpeciesCapacity: '5000.0'
+  grower:
+    Independent Logistic Grower:
+      steepness: uniform 0.6 0.8
   lowestX: '0.0'
   lowestY: '0.0'
   percentageLimitOnDailyMovement: '0.01'
   ratioFirstToSecondSpecies: '1.0'
   species0InsideTheBox: false
-  steepness: uniform 0.6 0.8
 -------
 Single Species Abundance:
   folderPath: inputs/california/biology/Dover Sole/
   scaling: 0.1
   speciesName: Dover Sole
+-------
+One Species School:
+  biomassEach: '10000.0'
+  diameter: '4.0'
+  numberOfSchools: '1.0'
+  speedInDays: '10.0'
+  startingX: uniform 0.0 30.0
+  startingY: uniform 0.0 30.0
+  waypoints: '0,0 : 40,0 :  40,40: 0,40'
+-------
+Yellow Bycatch Factory:
+  bycatchSpeciesName: Yelloweye Rockfish
+  initialBycatchAbundance: '1.0E7'
+  initialTargetAbundance: '1.0E8'
+  proportionJuvenileBycatch: '0.2'
+  proportionJuvenileTarget: '0.2'
+  separateYelloweyeStock: false
+  targetSpeciesName: Sablefish
+  verticalSeparator: '25.0'
 -------
