--- a/inputs/YAML Samples/components/BiologyInitializer.yaml
+++ b/inputs/YAML Samples/components/BiologyInitializer.yaml
@@ -40,7 +40,12 @@ From Left To Right Fixed:
 From Left To Right Logistic:
   carryingCapacity: '5000.0'
   differentialPercentageToMove: '0.001'
+  grower:
+    Independent Logistic Grower:
+      steepness: uniform 0.6 0.8
+  maxInitialCapacity: '1.0'
   minCapacityRatio: '0.2'
+  minInitialCapacity: '0.0'
   percentageLimitOnDailyMovement: '0.01'
 -------
 From Left To Right Well-Mixed:
