--- a/inputs/YAML Samples/components/BiologyInitializer.yaml
+++ b/inputs/YAML Samples/components/BiologyInitializer.yaml
@@ -140,40 +140,41 @@ One Species School:
   waypoints: '0,0 : 40,0 :  40,40: 0,40'
 -------
 Yellow Bycatch Factory:
-  bycatchInitialRecruits: '150480.0'
+  bycatchInitialRecruits: '111139.5982902'
   bycatchNaturalSurvivalRate: '0.95504'
   bycatchRecruitmentLag: '14.0'
   bycatchRecruitmentSteepness: '0.44056'
   bycatchRho: '0.981194230283006'
   bycatchSpeciesName: Yelloweye Rockfish
   bycatchVirginBiomass: '8883000.0'
-  bycatchWeightAtRecruitment: '1.11909797520236'
-  bycatchWeightAtRecruitmentMinus1: '1.01603952895487'
+  bycatchWeightAtRecruitment: '1.1191'
+  bycatchWeightAtRecruitmentMinus1: '1.01604'
   diffusingRate: '1.0E-4'
   northSouthSeparator: '50.0'
   proportionOfBycatchNorth: '1.0'
   separateBycatchStock: false
-  targetInitialRecruits: '1.2197524018851934E7'
-  targetNaturalSurvivalRate: '0.923116346386636'
+  targetInitialRecruits: '1.6713267E7'
+  targetNaturalSurvivalRate: '0.92311'
   targetRecruitmentLag: '3.0'
   targetRecruitmentSteepness: '0.6'
-  targetRho: '0.92267402483245'
+  targetRho: '0.813181970802262'
   targetSpeciesName: Sablefish
   targetVirginBiomass: '5.27154E8'
-  targetWeightAtRecruitment: '1.03312585773941'
-  targetWeightAtRecruitmentMinus1: '0.634560212266768'
+  targetWeightAtRecruitment: '1.03313'
+  targetWeightAtRecruitmentMinus1: '0.63456'
   verticalSeparator: '25.0'
 -------
 Yellow Bycatch Factory with History:
-  bycatchInitialRecruits: '150480.0'
+  bycatchInitialRecruits: '111139.5982902'
   bycatchNaturalSurvivalRate: '0.95504'
   bycatchRecruitmentLag: '14.0'
   bycatchRecruitmentSteepness: '0.44056'
   bycatchRho: '0.981194230283006'
   bycatchSpeciesName: Yelloweye Rockfish
   bycatchVirginBiomass: '8883000.0'
-  bycatchWeightAtRecruitment: '1.11909797520236'
-  bycatchWeightAtRecruitmentMinus1: '1.01603952895487'
+  bycatchWeightAtRecruitment: '1.1191'
+  bycatchWeightAtRecruitmentMinus1: '1.01604'
+  diffusingRate: '1.0E-4'
   historicalBycatchBiomass:
   - 1.0
   - 2.0
@@ -187,15 +188,15 @@ Yellow Bycatch Factory with History:
   northSouthSeparator: '50.0'
   proportionOfBycatchNorth: '1.0'
   separateBycatchStock: false
-  targetInitialRecruits: '1.2197524018851934E7'
-  targetNaturalSurvivalRate: '0.923116346386636'
+  targetInitialRecruits: '1.6713267E7'
+  targetNaturalSurvivalRate: '0.92311'
   targetRecruitmentLag: '3.0'
   targetRecruitmentSteepness: '0.6'
-  targetRho: '0.92267402483245'
+  targetRho: '0.813181970802262'
   targetSpeciesName: Sablefish
   targetVirginBiomass: '5.27154E8'
-  targetWeightAtRecruitment: '1.03312585773941'
-  targetWeightAtRecruitmentMinus1: '0.634560212266768'
+  targetWeightAtRecruitment: '1.03313'
+  targetWeightAtRecruitmentMinus1: '0.63456'
   verticalSeparator: '25.0'
 -------
 Linear Getter Biology:
