a bit more refactoring for old stuff like initial abundance and mortality + daily natural processes; we are ready

--- a/inputs/YAML Samples/components/BiologyInitializer.yaml
+++ b/inputs/YAML Samples/components/BiologyInitializer.yaml
@@ -137,7 +137,7 @@ Single Species Abundance:
   diffuser: No Diffusion
   habitabilityAllocator: Equal Allocation
   initialAbundanceAllocator: Equal Allocation
-  initialAbundanceFactory:
+  initialAbundance:
     Abundance From List:
       fishPerBinPerSex:
       - 10000000
