--- a/inputs/YAML Samples/components/BiologyInitializer.yaml
+++ b/inputs/YAML Samples/components/BiologyInitializer.yaml
@@ -13,6 +13,7 @@ Diffusing Logistic:
   maxInitialCapacity: '1.0'
   minInitialCapacity: '0.0'
   percentageLimitOnDailyMovement: '0.01'
+  speciesName: Species 0
 -------
 Habitat-Aware Diffusing Logistic:
   differentialPercentageToMove: '0.001'
@@ -35,11 +36,13 @@ Habitat-Aware 2 Species:
 -------
 From Left To Right Fixed:
   biologySmoothingIndex: '1000000.0'
+  exponent: '2.0'
   maximumBiomass: '5000.0'
 -------
 From Left To Right Logistic:
   carryingCapacity: '5000.0'
   differentialPercentageToMove: '0.001'
+  exponent: '1.0'
   grower:
     Independent Logistic Grower:
       steepness: uniform 0.6 0.8
@@ -52,6 +55,7 @@ From Left To Right Logistic with Climate Change:
   carryingCapacity: '5000.0'
   climateChangePercentageMovement: '0.001'
   differentialPercentageToMove: '0.001'
+  exponent: '1.0'
   grower:
     Independent Logistic Grower:
       steepness: uniform 0.6 0.8
@@ -125,6 +129,41 @@ Two Species Box:
   ratioFirstToSecondSpecies: '1.0'
   species0InsideTheBox: false
 -------
+Single Species Biomass:
+  differentialPercentageToMove: '0.001'
+  grower:
+    Independent Logistic Grower:
+      steepness: uniform 0.6 0.8
+  initialBiomassAllocator:
+    Random Allocator:
+      maximum: '5000.0'
+      minimum: '0.0'
+  initialCapacityAllocator:
+    Equal Allocation:
+      constantValue: '5000.0'
+  percentageLimitOnDailyMovement: '0.01'
+  speciesName: Species 0
+  unfishable: false
+-------
+Single Species Biomass Normalized:
+  biomassSuppliedPerCell: true
+  carryingCapacity: '5000.0'
+  differentialPercentageToMove: '0.001'
+  grower:
+    Independent Logistic Grower:
+      steepness: uniform 0.6 0.8
+  initialBiomass: '2500.0'
+  initialBiomassAllocator:
+    Random Allocator:
+      maximum: '1.0'
+      minimum: '0.0'
+  initialCapacityAllocator:
+    Equal Allocation:
+      constantValue: '1.0'
+  percentageLimitOnDailyMovement: '0.01'
+  speciesName: Species 0
+  unfishable: false
+-------
 Single Species Abundance From Directory:
   folderPath: inputs/california/biology/Dover Sole/
   scaling: 1.0
@@ -136,9 +175,13 @@ Single Species Abundance:
       proportionAging: '0.2'
   daily: false
   diffuser: No Diffusion
-  habitabilityAllocator: Equal Allocation
+  habitabilityAllocator:
+    Equal Allocation:
+      constantValue: '1.0'
   histogrammerOutput: false
-  initialAbundanceAllocator: Equal Allocation
+  initialAbundanceAllocator:
+    Equal Allocation:
+      constantValue: '1.0'
   initialAbundanceFactory:
     Abundance From List:
       fishPerBinPerSex:
@@ -155,7 +198,9 @@ Single Species Abundance:
       mortalityPerSubdivision:
       - 0.1
       - 0.1
-  recruitAllocator: Equal Allocation
+  recruitAllocator:
+    Equal Allocation:
+      constantValue: '1.0'
   recruitment:
     Logistic Recruitment:
       carryingCapacity: '1.0E8'
@@ -163,6 +208,122 @@ Single Species Abundance:
   rounding: true
   scaling: '1.0'
   speciesName: Red Fish
+-------
+Multiple Species Biomass:
+  addImaginarySpecies: true
+  constantBiomass: false
+  factories:
+  - Single Species Biomass:
+      differentialPercentageToMove: '0.001'
+      grower:
+        Independent Logistic Grower:
+          steepness: uniform 0.6 0.8
+      initialBiomassAllocator:
+        Random Allocator:
+          maximum: '5000.0'
+          minimum: '0.0'
+      initialCapacityAllocator:
+        Equal Allocation:
+          constantValue: '5000.0'
+      percentageLimitOnDailyMovement: '0.01'
+      speciesName: Red Fish
+      unfishable: false
+  - Single Species Biomass:
+      differentialPercentageToMove: '0.001'
+      grower:
+        Independent Logistic Grower:
+          steepness: uniform 0.6 0.8
+      initialBiomassAllocator:
+        Random Allocator:
+          maximum: '5000.0'
+          minimum: '0.0'
+      initialCapacityAllocator:
+        Equal Allocation:
+          constantValue: '5000.0'
+      percentageLimitOnDailyMovement: '0.01'
+      speciesName: Blue Fish
+      unfishable: false
+-------
+Multiple Species Abundance:
+  factories:
+  - Single Species Abundance:
+      aging:
+        Proportional Aging:
+          proportionAging: '0.2'
+      daily: false
+      diffuser: No Diffusion
+      habitabilityAllocator:
+        Equal Allocation:
+          constantValue: '1.0'
+      histogrammerOutput: false
+      initialAbundanceAllocator:
+        Equal Allocation:
+          constantValue: '1.0'
+      initialAbundanceFactory:
+        Abundance From List:
+          fishPerBinPerSex:
+          - 1.0E7
+          - 1000000.0
+          - 10000.0
+      meristics:
+        Weight List Meristics:
+          maturityPerBin: 0,0.5,1
+          mortalityRate: '0.08'
+          weightsPerBin: .1,1,5
+      mortalityProcess:
+        Exponential Mortality:
+          mortalityPerSubdivision:
+          - 0.1
+          - 0.1
+      recruitAllocator:
+        Equal Allocation:
+          constantValue: '1.0'
+      recruitment:
+        Logistic Recruitment:
+          carryingCapacity: '1.0E8'
+          malthusianParameter: '0.6'
+      rounding: true
+      scaling: '1.0'
+      speciesName: Red Fish
+  - Single Species Abundance:
+      aging:
+        Proportional Aging:
+          proportionAging: '0.2'
+      daily: false
+      diffuser: No Diffusion
+      habitabilityAllocator:
+        Equal Allocation:
+          constantValue: '1.0'
+      histogrammerOutput: false
+      initialAbundanceAllocator:
+        Equal Allocation:
+          constantValue: '1.0'
+      initialAbundanceFactory:
+        Abundance From List:
+          fishPerBinPerSex:
+          - 1.0E7
+          - 1000000.0
+          - 10000.0
+      meristics:
+        Weight List Meristics:
+          maturityPerBin: 0,0.5,1
+          mortalityRate: '0.08'
+          weightsPerBin: .1,1,5
+      mortalityProcess:
+        Exponential Mortality:
+          mortalityPerSubdivision:
+          - 0.1
+          - 0.1
+      recruitAllocator:
+        Equal Allocation:
+          constantValue: '1.0'
+      recruitment:
+        Logistic Recruitment:
+          carryingCapacity: '1.0E8'
+          malthusianParameter: '0.6'
+      rounding: true
+      scaling: '1.0'
+      speciesName: Blue Fish
 -------
 One Species School:
   biomassEach: '10000.0'
