--- a/inputs/YAML Samples/scenario/Abstract 2 Populations.yaml
+++ b/inputs/YAML Samples/scenario/Abstract 2 Populations.yaml
@@ -27,6 +27,7 @@ Abstract 2 Populations:
       dropInUtilityNeededForUnfriend: '-1.0'
       ignoreEdgeDirection: true
       ignoreFailedTrips: false
+      maxInitialDistance: -1.0
       objectiveFunction:
         Hourly Profit Objective:
           opportunityCosts: true
@@ -46,6 +47,7 @@ Abstract 2 Populations:
       dropInUtilityNeededForUnfriend: '-1.0'
       ignoreEdgeDirection: true
       ignoreFailedTrips: false
+      maxInitialDistance: -1.0
       objectiveFunction:
         Hourly Profit Objective:
           opportunityCosts: true
