--- a/inputs/YAML Samples/components/BiologyInitializer.yaml
+++ b/inputs/YAML Samples/components/BiologyInitializer.yaml
@@ -244,6 +244,7 @@ Multiple Species Biomass:
       unfishable: false
 -------
 Multiple Species Abundance:
+  addGarbageSpecies: true
   factories:
   - Single Species Abundance:
       aging:
