--- a/inputs/YAML Samples/components/BiologyInitializer.yaml
+++ b/inputs/YAML Samples/components/BiologyInitializer.yaml
@@ -431,6 +431,35 @@ Boxcar Biology:
   virginRecruits: '4.0741397E7'
   yearlyMortality: '0.1'
 -------
+Irregular Boxcar Biology:
+  LInfinity: '113.0'
+  abundanceSimulator: null
+  allometricAlpha: '0.015'
+  allometricBeta: '2.961'
+  binnedLengthsInCm:
+  - 10.0
+  - 30.0
+  - 60.0
+  cumulativePhi: '14.2444066771724'
+  diffuser: No Diffusion
+  habitabilityAllocator:
+    Equal Allocation:
+      constantValue: '1.0'
+  initialAbundanceAllocator:
+    Equal Allocation:
+      constantValue: '1.0'
+  initialBtOverK: '1.0'
+  k: '0.364'
+  lengthAtMaturity: '50.0'
+  numberOfBins: 25
+  recruitAllocator:
+    Equal Allocation:
+      constantValue: '1.0'
+  speciesName: Red Fish
+  steepness: '0.6'
+  virginRecruits: '4.0741397E7'
+  yearlyMortality: '0.1'
+-------
 Boxcar Biology with pulses:
   LInfinity: '113.0'
   allometricAlpha: '0.015'
